Changelog
=========

### v1.1.3 - 29/10/2015

* [Bugfix] Authentication problem when auth file doesn't exist

### v1.1.2 - 23/10/2015

* [Feature] Show suggestions to wrong commands #164
* [Feature] Add `DISABLE_INTERACTIVE` environment variable to disable blocking user input #146
* [Feature - Completion] Enable completion on restart command #158 #159
* [Bugfix] Login on Windows 10 when using git bash #171 #160
* [Bugfix] Fix error when upgrading addon #168 #170
* [Bugfix] User friendly login prompt in case of "No account" #152
* [Bugfix] Destroy command requesting API to know if app exists or not before asking for confirmation #161 #162 #155 #151
* [Bugfix] Do not display wrong completion when user is not logged in #146 #142
* [Refactoring] Extract Scalingo API functions to an external package github.com/Scalingo/go-scalingo #150
* [Refactoring] Use API endpoint to update multiple environment variables at once #153

### v1.1.1 - 22/09/2015

* [Feature] Build in Linux ARM #145
* [Feature - Completion] Add local cache of applications when using completion on them, avoid heavy unrequired API requests #141
* [Feature - Completion] Completion of the `--remote` flag #139
* [Optimisation - Completion] Completion of `collaborators-add` command is now quicker (×2 - ×4) #137
* [Bugfix - Completion] Do not display error in autocompletion when unlogged #142
* [Bugfix] Fix regression, small flags were not working anymore #144 #147

### v1.1.0 - 17/09/2015

* [Feature - CLI] Setup Bash and ZSH completion thanks to codegangsta/cli helpers #127
* [Feature - CLI] Add -r/--remote flag to specify a GIT remote instead of an app name #89
* [Feature - CLI] Add -r/--remote flag to the `create` subcommand to specify an alternative git remote name (default is `scalingo`) #129
* [Feature - Log] Add -F/--filter flag to filter log output by container types #118
* [Bugfix - Run] Fix parsing of environment variables (flag -e) #119