@@ -1,6 +1,10 @@
 Changelog
 =========
 
+### toBeReleased
+
+* [Feature] Add `stats` command to get containers CPU and memory metrics
+
 ### v1.1.3 - 29/10/2015
 
 * [Bugfix] Authentication problem when auth file doesn't exist
